--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -18,3 +18,12 @@
     @mixin-content;
   }
 }
+
+@define-mixin clearfix {
+
+  &::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+}
