--- a/app/assets/styles/modules/_large-img.css
+++ b/app/assets/styles/modules/_large-img.css
@@ -1,5 +1,10 @@
 .large-img {
+  border-bottom: 10px solid $mainColor;
   position: relative;
+
+  &__image {
+    display: block;
+  }
 
   &__text-content {
     position: absolute;
@@ -13,18 +18,10 @@
   &__title {
     font-weight: 300;
     color: $mainColor;
-    font-size: 1.1rem;
+    font-size: 2.4rem;
     margin: 0;
 
     @mixin atSmall {
-      font-size: 2rem;
-    }
-
-    @mixin atMedium {
-      font-size: 3.2rem;
-    }
-
-    @mixin atLarge {
       font-size: 4.8rem;
     }
   }
@@ -32,7 +29,7 @@
   &__subtitle {
     font-weight: 300;
     color: $mainColor;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     margin: 0;
 
     @mixin atSmall {
