Styling testimonial section

--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -19,6 +19,13 @@
   }
 }
 
+@define-mixin atLargeEnough {
+
+  @media (min-width: 1010px) {
+    @mixin-content;
+  }
+}
+
 @define-mixin clearfix {
 
   &::after {
