--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,8 +1,34 @@
 .page-section {
   padding: 1.2rem 0;
 
+  @mixin atLargeEnough {
+    padding: 4.5rem 0;
+  }
+
+  &--no-b-padding-until-largeEnough {
+    padding-bottom: 0;
+
+    @mixin atLargeEnough {
+      padding-bottom: 4.5rem;
+    }
+  }
+
   &--blue {
     background-color: $mainColor;
-    color: #FFF;
+    color: #fff;
+  }
+
+  &--testimonials {
+    background-color: #e2e6ef;
+
+    @mixin atLargeEnough {
+      background: url("assets/images/testimonials-bg.jpg") top center no-repeat;
+      background-size: cover;
+    }
+  }
+
+  &--icon {
+    width: 50px;
+    height: 50px;
   }
 }
