--- a/app/assets/styles/modules/_nav-bar.css
+++ b/app/assets/styles/modules/_nav-bar.css
@@ -1,8 +1,14 @@
 .nav-bar {
+  padding-top: 10px;
+
+  @mixin atMedium {
+    padding-top: 0;
+  }
 
 	&--pull-right {
-		float: right;
-		padding: ;
+		@mixin atMedium {
+			float: right;
+		}
 	}
 
 	ul {
@@ -13,15 +19,36 @@
 
 	li {
 		list-style: none;
-		float: left;
-		padding-right: 20px;
+		display: inline-block;
+		padding-right: 7px;
+
+		@mixin atMedium {
+			padding-right: 20px;
+			float: left;
+			display: block;
+		}
 	}
 
-	a {
-		color: #FFF;
-		text-decoration: none;
-		font-weight: 200;
-		display: block;
-		padding: 12px 0;
+	li:last-child {
+		padding-right: 0;
+		@mixin atMedium {
+			padding-right: 20px;
+		}
 	}
+
+  a {
+    color: #FFF;
+    font-weight: 300;
+    text-decoration: none;
+    display: block;
+    padding: 5px 8px;
+    font-size: .8rem;
+    background-color: rgba($mainColor, .5);
+
+    @mixin atMedium {
+      font-size: 1rem;
+      padding: 12px 0;
+      background-color: transparent;
+    }
+  }
 }
