--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,3 +15,4 @@
 @import "modules/_site-footer.css";
 @import "modules/_site-header.css";
 @import "modules/_nav-bar.css";
+@import "modules/_display-item.css";
