--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
   }
   
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainColor, .3);
+
+    &--darker {
+      background-color: rgba($mainColor, .85);
+    }
   }
 
   &__button-container {
@@ -23,6 +28,7 @@
     position: absolute;
     top: 0;
     left: 50%;
+    transition: transform .3s ease-out;
     transform: translateX(-50%) scale(.8);
     transform-origin: 50% 0;
     background-color: $mainColor;
@@ -32,6 +38,10 @@
       left: auto;
       transform: translateX(0);
       padding: 25px 36px;
+
+      .site-header--darker & {
+        transform: scale(.55)
+      }
     }
   }
 
