Get in touch "Modal"

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,3 +16,5 @@
 @import "modules/_site-header.css";
 @import "modules/_nav-bar.css";
 @import "modules/_display-item.css";
+@import "modules/_social-media-icons.css";
+@import "modules/_modal.css";
