Connect client area with cloud function

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -18,3 +18,4 @@
 @import "modules/_display-item.css";
 @import "modules/_social-media-icons.css";
 @import "modules/_modal.css";
+@import "modules/_client-area.css";
